[tool.poetry]
name = "modpack.core"
version = "0.1.0"
description = ""
authors = ["Shparki <murrmat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gitpython = "^3.1.7"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
pytest = "^5.4.3"
pytest-dependency = "^0.5.1"
pydocstyle = "^5.0.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
